--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,10 @@ python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-dotenv==1.0.0
 requests==2.31.0
-pydantic==2.5.0
+pydantic[email]==2.5.0
 pydantic-settings==2.1.0
 loguru==0.7.2
 httpx==0.25.2
 pytest==7.4.3
 pytest-asyncio==0.21.1
+email-validator==2.2.0
